@@ -103,6 +103,12 @@ Library
 
 - Removed the sunaudio module. Use sunau instead.
 
+- Issue #3554: ctypes.string_at and ctypes.wstring_at did call Python
+  api functions without holding the GIL, which could lead to a fatal
+  error when they failed.
+
+- Issue #799428: Fix Tkinter.Misc._nametowidget to unwrap Tcl command objects.
+
 - Removed "ast" function aliases from the parser module.
 
 - Issue #3313: Fixed a crash when a failed dlopen() call does not set
